- added javascript for collapsing sections in json-response, - fixed usage of private service-alias (that will be removed by RemovePrivateAliases-compiler pass)

--- a/Resources/public/css/screen.css
+++ b/Resources/public/css/screen.css
@@ -616,3 +616,8 @@ form .request-content {
 .motd {
   padding:20px;
 }
+
+.json-toggle-section {
+    color: #660;
+    cursor: pointer;
+}
